--- a/src/app/editor/templates/analysis-panels.html
+++ b/src/app/editor/templates/analysis-panels.html
@@ -18,23 +18,12 @@
       <div class="col-md-6">
         <div class="form-group" id="beta-input-form-group">
           <label class="text-16" for="beta-input">Smoothness level &beta;</label>
-          <br/>0.1 &le; &beta; &le; &epsilon;/10
+          <br/>0 &lt; &beta; &lt; &epsilon;/5
           <br/>smaller &beta; gives less noise
         </div>
       </div>
       <div class="col-md-6">
         <input class="form-control beta-input" type="number" id="beta-input" value="0.1" step="0.1"/>
-      </div>
-    </div>
-    <div class="row" style="text-align: right">
-      <div class="col-md-6">
-        <div class="form-group" id="distanceG-input-form-group">
-          <label class="text-16" for="distanceG-input">Distance G</label>
-          <br/>cost of row insertion / deletion in edit distance
-        </div>
-      </div>
-      <div class="col-md-6">
-        <input class="form-control distanceG-input" type="number" id="distanceG-input" value="1.0" step="0.1"/>
       </div>
     </div>
     <div class="row" style="text-align:right">
