Beta input is now optional

--- a/src/app/editor/templates/analysis-panels.html
+++ b/src/app/editor/templates/analysis-panels.html
@@ -22,8 +22,9 @@
           <br/>smaller &beta; gives less noise
         </div>
       </div>
-      <div class="col-md-6">
-        <input class="form-control beta-input" type="number" id="beta-input" value="0.1" step="0.1"/>
+      <div class="col-md-6 text-left">
+        <input class="beta-toggle" type="checkbox" checked data-toggle="toggle">
+        <input class="form-control beta-input" type="number" id="beta-input" value="0.1" step="0.1" style="margin-top:10px"/>
       </div>
     </div>
     <div class="row" style="text-align:right">
