--- a/src/app/editor/templates/task-options-panel.html
+++ b/src/app/editor/templates/task-options-panel.html
@@ -4,11 +4,15 @@
       <h3 class="task-name"></h3>
     </div>
     <div class="panel-body">
-      
-      <div class="form-group" style="text-align: left;">
-        <label class="text-16" for="task-input1">Query input</label>
-        <textarea class="form-control code" id="task-input1" style="display: none;"></textarea>
-      </div>
+
+        <div class="form-group" style="text-align: left;">
+            <label class="text-16" for="task-schema">Output table schema</label>
+            <textarea class="form-control code" id="task-schema" style="display: none;"></textarea>
+        </div>
+        <div class="form-group" style="text-align: left;">
+            <label class="text-16" for="task-query">Output table query</label>
+            <textarea class="form-control code" id="task-query" style="display: none;"></textarea>
+        </div>
 
     </div>
     <div class="panel-footer text-right">
