--- a/src/app/editor/templates/analysis-panels.html
+++ b/src/app/editor/templates/analysis-panels.html
@@ -42,7 +42,7 @@
       <div class="double-bounce1-2"></div>
       <div class="double-bounce2-2"></div>
     </div>
-    <div id="analysis-results-panel-content">
+    <div id="analysis-results-panel-content" style="word-break: break-all;">
     </div>
   </div>
 </div>
