--- a/src/styles.less
+++ b/src/styles.less
@@ -243,3 +243,11 @@ html, body, #canvas, #canvas > div {
     }
   }
 }
+
+.clickable {
+  cursor: pointer;
+  color: deepskyblue;
+  &:hover {
+    text-decoration: underline;
+  }
+}
